--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
 
         <p>
-          I'm a freelance artist, photographer, and &amp; amateur web-designer. People tell me I'm fun, creative, brilliant &amp; glamorous, just 2 pain a picture. :) :) :)
+          I'm a freelance artist, photographer, and &amp; amateur web-designer. People tell me I'm fun, creative, brilliant &amp; glamorous, just 2 paint a picture. :) :) :)
         </p>
 
         <p>
